5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4139/executions/1675_2189.log
== TEST (2019-05-02 20:19:37) 
-- CODE:
a = input("Nome: ").upper()

c = a[0]
print(c)
-- OUTPUT:
M
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 20:20:09) 
-- CODE:
a = input("Nome: ").upper()

c = a[1]
print(c)
-- OUTPUT:
A
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 20:28:05) 
-- CODE:
a = input("Nome: ").upper()

c = a[0]

if(c>="A")or(c<="K"):
	print(a,"vai para a sala 101")
elif(c>="L")or(c<="N"):
	print(a,"vai para a sala 102")
elif(c>="O")or(c<="Z"):
	print(a,"vai para a sala 103")
-- OUTPUT:
MARIA vai para a sala 101
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 20:28:24) 
-- CODE:
a = input("Nome: ").upper()

c = a[0]

if(c>="A")or(c<="K"):
	print(a,"vai para a sala 101")
elif(c>="L")or(c<="N"):
	print(a,"vai para a sala 102")
elif(c>="O")or(c<="Z"):
	print(a,"vai para a sala 103")
-- OUTPUT:
MARIA vai para a sala 101
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 20:28:49) 
-- CODE:
a = input("Nome: ").upper()

c = a[0]

if(c>="A")or(c<="K"):
	print(a,"vai para a sala 101")
elif(c>="L")or(c<="N"):
	print(a,"vai para a sala 102")
elif(c>="O")or(c<="Z"):
	print(a,"vai para a sala 103")
-- OUTPUT:
MARIA vai para a sala 101
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 20:41:21) 
-- CODE:
a = input("Nome: ").upper()

c = a[0]

A=1,B=1,C=1,D=1,E=1,F=1,G=1,H=1,I=1,J=1,K=1
L=2,M=2,N=2,
O=3,P=3,Q=3,R=3,S=3,T=3,U=3,V=3,X=3,Z=3

if(c>= A)or(c< = K):
	print(a,"vai para a sala 101")
elif(c>=L)or(c<=N):
	print(a,"vai para a sala 102")
elif(c>=O)or(c<=Z):
	print(a,"vai para a sala 103")
-- ERROR:
File "XXXX", line 9
    if(c>= A)or(c< = K):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 20:43:28) 
-- CODE:
a = input("Nome: ").upper()

c = a[0]

A=1,B=1,C=1,D=1,E=1,F=1,G=1,H=1,I=1,J=1,K=1
L=2,M=2,N=2,
O=3,P=3,Q=3,R=3,S=3,T=3,U=3,V=3,X=3,Z=3

if(C==1):
	print(a,"vai para a sala 101")
elif(c >= L)or(c <= N):
	print(a,"vai para a sala 102")
elif(c >= O)or(c <= Z):
	print(a,"vai para a sala 103")
-- ERROR:
File "XXXX", line 5
    A=1,B=1,C=1,D=1,E=1,F=1,G=1,H=1,I=1,J=1,K=1
     ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 20:44:36) 
-- CODE:
a = input("Nome: ").upper()

c = a[0]

A=1,B=1,C=1,D=1,E=1,F=1,G=1,H=1,I=1,J=1,K=1
L=2,M=2,N=2,
O=3,P=3,Q=3,R=3,S=3,T=3,U=3,V=3,X=3,Z=3

if(c==1):
	print(a,"vai para a sala 101")
elif(c == 2):
	print(a,"vai para a sala 102")
elif(c ==3):
	print(a,"vai para a sala 103")
-- ERROR:
File "XXXX", line 5
    A=1,B=1,C=1,D=1,E=1,F=1,G=1,H=1,I=1,J=1,K=1
     ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 20:45:13) 
-- CODE:
a = input("Nome: ").upper()

c = a[0]

A=1 B=1 C=1 D=1 E=1 F=1 G=1 H=1 I=1 J=1 K=1
L=2,M=2,N=2,
O=3,P=3,Q=3,R=3,S=3,T=3,U=3,V=3,X=3,Z=3

if(c==1):
	print(a,"vai para a sala 101")
elif(c == 2):
	print(a,"vai para a sala 102")
elif(c ==3):
	print(a,"vai para a sala 103")
-- ERROR:
File "XXXX", line 5
    A=1 B=1 C=1 D=1 E=1 F=1 G=1 H=1 I=1 J=1 K=1
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 20:50:59) 
-- CODE:
a = input("Nome: ").upper()

"C" = a[0]

if("C">="A")or("C"<="K"):
	print(a,"vai para a sala 101")
elif("C">= "L")or("C"<="N"):
	print(a,"vai para a sala 102")
elif("C">="O")or("C"<="Z")
	print(a,"vai para a sala 103")
-- ERROR:
File "XXXX", line 9
    elif("C">="O")or("C"<="Z")
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 20:51:09) 
-- CODE:
a = input("Nome: ").upper()

"C" = a[0]

if("C">="A")or("C"<="K"):
	print(a,"vai para a sala 101")
elif("C">= "L")or("C"<="N"):
	print(a,"vai para a sala 102")
elif("C">="O")or("C"<="Z"):
	print(a,"vai para a sala 103")
-- ERROR:
File "XXXX", line 3
    "C" = a[0]
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 20:51:16) 
-- CODE:
a = input("Nome: ").upper()

"C" = a[0]

if("C">="A")or("C"<="K"):
	print(a,"vai para a sala 101")
elif("C">= "L")or("C"<="N"):
	print(a,"vai para a sala 102")
elif("C">="O")or("C"<="Z"):
	print(a,"vai para a sala 103")
-- ERROR:
File "XXXX", line 3
    "C" = a[0]
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 20:52:41) 
-- CODE:
a = input("Nome: ").upper()

C = a[0]

if(C >= "A")or(C <= "K"):
	print(a,"vai para a sala 101")
elif(C >= "L")or(C <= "N"):
	print(a,"vai para a sala 102")
elif(C >= "O")or(C <= "Z"):
	print(a,"vai para a sala 103")
-- OUTPUT:
MARIA vai para a sala 101
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 20:55:08) 
-- CODE:
a = input("Nome: ").upper()

C = a[0]

if(C >= "A")or(C <= "K"):
	print(a,"vai para a sala 101")
elif(C >= "L")or(C <= "N"):
	print(a,"vai para a sala 102")
elif(C >= "O")or(C <= "Z"):
	print(a,"vai para a sala 103")
-- OUTPUT:
MARIA vai para a sala 101
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 21:05:54) 
-- CODE:
a = input("Nome: ").upper()

C = a[0]

if(C=="A")or(C=="B")or(C=="C")or(C=="D")or(C=="E")or(C=="F")or(C=="G")or(C=="H")or(C=="I")or(C=="J")or(C=="K"):
	print(a,"vai para a sala 101")
elif(C=="L")or(C=="M")(C=="N"):
	print(a,"vai para a sala 102")
elif(C=="O")or(C=="P")or(C=="Q")or(C=="R")or(C=="S")or(C=="T")or(C=="U")or(C=="V")or(C=="W")or(C=="X")or(C=="Y")(C=="Z"):
	print(a,"vai para a sala 103")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    elif(C=="L")or(C=="M")(C=="N"):
TypeError: 'bool' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 21:07:12) 
-- CODE:
a = input("Nome: ").upper()

C = a[0]

if(C=="A")or(C=="B")or(C=="C")or(C=="D")or(C=="E")or(C=="F")or(C=="G")or(C=="H")or(C=="I")or(C=="J")or(C=="K"):
	print(a,"vai para a sala 101")
elif(C=="L")or(C=="M")or(C=="N"):
	print(a,"vai para a sala 102")
elif(C=="O")or(C=="P")or(C=="Q")or(C=="R")or(C=="S")or(C=="T")or(C=="U")or(C=="V")or(C=="W")or(C=="X")or(C=="Y")(C=="Z"):
	print(a,"vai para a sala 103")
-- OUTPUT:
MARIA vai para a sala 102
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 21:07:29) 
-- CODE:
a = input("Nome: ").upper()

C = a[0]

if(C=="A")or(C=="B")or(C=="C")or(C=="D")or(C=="E")or(C=="F")or(C=="G")or(C=="H")or(C=="I")or(C=="J")or(C=="K"):
	print(a,"vai para a sala 101")
elif(C=="L")or(C=="M")or(C=="N"):
	print(a,"vai para a sala 102")
elif(C=="O")or(C=="P")or(C=="Q")or(C=="R")or(C=="S")or(C=="T")or(C=="U")or(C=="V")or(C=="W")or(C=="X")or(C=="Y")(C=="Z"):
	print(a,"vai para a sala 103")
-- OUTPUT:
MARIA vai para a sala 102
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 21:07:36) 
-- CODE:
a = input("Nome: ").upper()

C = a[0]

if(C=="A")or(C=="B")or(C=="C")or(C=="D")or(C=="E")or(C=="F")or(C=="G")or(C=="H")or(C=="I")or(C=="J")or(C=="K"):
	print(a,"vai para a sala 101")
elif(C=="L")or(C=="M")or(C=="N"):
	print(a,"vai para a sala 102")
elif(C=="O")or(C=="P")or(C=="Q")or(C=="R")or(C=="S")or(C=="T")or(C=="U")or(C=="V")or(C=="W")or(C=="X")or(C=="Y")(C=="Z"):
	print(a,"vai para a sala 103")
-- OUTPUT:
MARIA vai para a sala 102
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 21:07:46) 
-- CODE:
a = input("Nome: ").upper()

C = a[0]

if(C=="A")or(C=="B")or(C=="C")or(C=="D")or(C=="E")or(C=="F")or(C=="G")or(C=="H")or(C=="I")or(C=="J")or(C=="K"):
	print(a,"vai para a sala 101")
elif(C=="L")or(C=="M")or(C=="N"):
	print(a,"vai para a sala 102")
elif(C=="O")or(C=="P")or(C=="Q")or(C=="R")or(C=="S")or(C=="T")or(C=="U")or(C=="V")or(C=="W")or(C=="X")or(C=="Y")(C=="Z"):
	print(a,"vai para a sala 103")
-- OUTPUT:
MARIA vai para a sala 102
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 21:07:54) 
-- CODE:
a = input("Nome: ").upper()

C = a[0]

if(C=="A")or(C=="B")or(C=="C")or(C=="D")or(C=="E")or(C=="F")or(C=="G")or(C=="H")or(C=="I")or(C=="J")or(C=="K"):
	print(a,"vai para a sala 101")
elif(C=="L")or(C=="M")or(C=="N"):
	print(a,"vai para a sala 102")
elif(C=="O")or(C=="P")or(C=="Q")or(C=="R")or(C=="S")or(C=="T")or(C=="U")or(C=="V")or(C=="W")or(C=="X")or(C=="Y")(C=="Z"):
	print(a,"vai para a sala 103")
-- OUTPUT:
MARIA vai para a sala 102
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 21:08:03) 
-- CODE:
a = input("Nome: ").upper()

C = a[0]

if(C=="A")or(C=="B")or(C=="C")or(C=="D")or(C=="E")or(C=="F")or(C=="G")or(C=="H")or(C=="I")or(C=="J")or(C=="K"):
	print(a,"vai para a sala 101")
elif(C=="L")or(C=="M")or(C=="N"):
	print(a,"vai para a sala 102")
elif(C=="O")or(C=="P")or(C=="Q")or(C=="R")or(C=="S")or(C=="T")or(C=="U")or(C=="V")or(C=="W")or(C=="X")or(C=="Y")(C=="Z"):
	print(a,"vai para a sala 103")
-- OUTPUT:
MARIA vai para a sala 102
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 21:08:48) 
-- CODE:
a = input("Nome: ").upper()

C = a[0]

if(C=="A")or(C=="B")or(C=="C")or(C=="D")or(C=="E")or(C=="F")or(C=="G")or(C=="H")or(C=="I")or(C=="J")or(C=="K"):
	print(a,"vai para a sala 101")
elif(C=="L")or(C=="M")or(C=="N"):
	print(a,"vai para a sala 102")
elif(C=="O")or(C=="P")or(C=="Q")or(C=="R")or(C=="S")or(C=="T")or(C=="U")or(C=="V")or(C=="W")or(C=="X")or(C=="Y")(C=="Z"):
	print(a,"vai para a sala 103")
-- EXECUTION TIME:
0.162219
-- TEST CASE 1:
---- input:
Maria
---- correct output:
Maria vai para a sala 102
---- user output:
MARIA vai para a sala 102
-- TEST CASE 2:
---- input:
Jose
---- correct output:
Jose vai para a sala 101
---- user output:
JOSE vai para a sala 101
-- TEST CASE 3:
---- input:
Zenilda
---- correct output:
Zenilda vai para a sala 103
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 21:10:39) 
-- CODE:
a = input("Nome: ").upper()

C = a[0]

if(C=="A")or(C=="B")or(C=="C")or(C=="D")or(C=="E")or(C=="F")or(C=="G")or(C=="H")or(C=="I")or(C=="J")or(C=="K"):
	print(a," vai para a sala 101")
elif(C=="L")or(C=="M")or(C=="N"):
	print(a," vai para a sala 102")
elif(C=="O")or(C=="P")or(C=="Q")or(C=="R")or(C=="S")or(C=="T")or(C=="U")or(C=="V")or(C=="W")or(C=="X")or(C=="Y")(C=="Z"):
	print(a," vai para a sala 103")
-- EXECUTION TIME:
0.204684
-- TEST CASE 1:
---- input:
Maria
---- correct output:
Maria vai para a sala 102
---- user output:
MARIA  vai para a sala 102
-- TEST CASE 2:
---- input:
Jose
---- correct output:
Jose vai para a sala 101
---- user output:
JOSE  vai para a sala 101
-- TEST CASE 3:
---- input:
Zenilda
---- correct output:
Zenilda vai para a sala 103
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 21:10:42) 
-- CODE:
a = input("Nome: ").upper()

C = a[0]

if(C=="A")or(C=="B")or(C=="C")or(C=="D")or(C=="E")or(C=="F")or(C=="G")or(C=="H")or(C=="I")or(C=="J")or(C=="K"):
	print(a," vai para a sala 101")
elif(C=="L")or(C=="M")or(C=="N"):
	print(a," vai para a sala 102")
elif(C=="O")or(C=="P")or(C=="Q")or(C=="R")or(C=="S")or(C=="T")or(C=="U")or(C=="V")or(C=="W")or(C=="X")or(C=="Y")(C=="Z"):
	print(a," vai para a sala 103")
-- EXECUTION TIME:
0.141426
-- TEST CASE 1:
---- input:
Maria
---- correct output:
Maria vai para a sala 102
---- user output:
MARIA  vai para a sala 102
-- TEST CASE 2:
---- input:
Jose
---- correct output:
Jose vai para a sala 101
---- user output:
JOSE  vai para a sala 101
-- TEST CASE 3:
---- input:
Zenilda
---- correct output:
Zenilda vai para a sala 103
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 21:10:44) 
-- CODE:
a = input("Nome: ").upper()

C = a[0]

if(C=="A")or(C=="B")or(C=="C")or(C=="D")or(C=="E")or(C=="F")or(C=="G")or(C=="H")or(C=="I")or(C=="J")or(C=="K"):
	print(a," vai para a sala 101")
elif(C=="L")or(C=="M")or(C=="N"):
	print(a," vai para a sala 102")
elif(C=="O")or(C=="P")or(C=="Q")or(C=="R")or(C=="S")or(C=="T")or(C=="U")or(C=="V")or(C=="W")or(C=="X")or(C=="Y")(C=="Z"):
	print(a," vai para a sala 103")
-- EXECUTION TIME:
0.193911
-- TEST CASE 1:
---- input:
Maria
---- correct output:
Maria vai para a sala 102
---- user output:
MARIA  vai para a sala 102
-- TEST CASE 2:
---- input:
Jose
---- correct output:
Jose vai para a sala 101
---- user output:
JOSE  vai para a sala 101
-- TEST CASE 3:
---- input:
Zenilda
---- correct output:
Zenilda vai para a sala 103
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 21:12:00) 
-- CODE:
a = input("Nome: ")

C = a[0].upper()

if(C=="A")or(C=="B")or(C=="C")or(C=="D")or(C=="E")or(C=="F")or(C=="G")or(C=="H")or(C=="I")or(C=="J")or(C=="K"):
	print(a," vai para a sala 101")
elif(C=="L")or(C=="M")or(C=="N"):
	print(a," vai para a sala 102")
elif(C=="O")or(C=="P")or(C=="Q")or(C=="R")or(C=="S")or(C=="T")or(C=="U")or(C=="V")or(C=="W")or(C=="X")or(C=="Y")(C=="Z"):
	print(a," vai para a sala 103")
-- EXECUTION TIME:
0.216641
-- TEST CASE 1:
---- input:
Maria
---- correct output:
Maria vai para a sala 102
---- user output:
Maria  vai para a sala 102
-- TEST CASE 2:
---- input:
Jose
---- correct output:
Jose vai para a sala 101
---- user output:
Jose  vai para a sala 101
-- TEST CASE 3:
---- input:
Zenilda
---- correct output:
Zenilda vai para a sala 103
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 21:12:03) 
-- CODE:
a = input("Nome: ")

C = a[0].upper()

if(C=="A")or(C=="B")or(C=="C")or(C=="D")or(C=="E")or(C=="F")or(C=="G")or(C=="H")or(C=="I")or(C=="J")or(C=="K"):
	print(a," vai para a sala 101")
elif(C=="L")or(C=="M")or(C=="N"):
	print(a," vai para a sala 102")
elif(C=="O")or(C=="P")or(C=="Q")or(C=="R")or(C=="S")or(C=="T")or(C=="U")or(C=="V")or(C=="W")or(C=="X")or(C=="Y")(C=="Z"):
	print(a," vai para a sala 103")
-- OUTPUT:
Maria  vai para a sala 102
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 21:12:15) 
-- CODE:
a = input("Nome: ")

C = a[0].upper()

if(C=="A")or(C=="B")or(C=="C")or(C=="D")or(C=="E")or(C=="F")or(C=="G")or(C=="H")or(C=="I")or(C=="J")or(C=="K"):
	print(a," vai para a sala 101")
elif(C=="L")or(C=="M")or(C=="N"):
	print(a," vai para a sala 102")
elif(C=="O")or(C=="P")or(C=="Q")or(C=="R")or(C=="S")or(C=="T")or(C=="U")or(C=="V")or(C=="W")or(C=="X")or(C=="Y")(C=="Z"):
	print(a," vai para a sala 103")
-- OUTPUT:
Maria  vai para a sala 102
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 21:13:02) 
-- CODE:
a = input("Nome: ")

C = a[0].upper()

if(C=="A")or(C=="B")or(C=="C")or(C=="D")or(C=="E")or(C=="F")or(C=="G")or(C=="H")or(C=="I")or(C=="J")or(C=="K"):
	print(a," vai para a sala 101")
elif(C=="L")or(C=="M")or(C=="N"):
	print(a," vai para a sala 102")
elif(C=="O")or(C=="P")or(C=="Q")or(C=="R")or(C=="S")or(C=="T")or(C=="U")or(C=="V")or(C=="W")or(C=="X")or(C=="Y")(C=="Z"):
	print(a," vai para a sala 103")
-- EXECUTION TIME:
0.182535
-- TEST CASE 1:
---- input:
Maria
---- correct output:
Maria vai para a sala 102
---- user output:
Maria  vai para a sala 102
-- TEST CASE 2:
---- input:
Jose
---- correct output:
Jose vai para a sala 101
---- user output:
Jose  vai para a sala 101
-- TEST CASE 3:
---- input:
Zenilda
---- correct output:
Zenilda vai para a sala 103
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 21:14:22) 
-- CODE:
a = input("Nome: ")

C = a[0].upper()
print(C)

#if(C=="A")or(C=="B")or(C=="C")or(C=="D")or(C=="E")or(C=="F")or(C=="G")or(C=="H")or(C=="I")or(C=="J")or(C=="K"):
#	print(a," vai para a sala 101")
#elif(C=="L")or(C=="M")or(C=="N"):
#	print(a," vai para a sala 102")
#elif(C=="O")or(C=="P")or(C=="Q")or(C=="R")or(C=="S")or(C=="T")or(C=="U")or(C=="V")or(C=="W")or(C=="X")or(C=="Y")(C=="Z"):
#	print(a," vai para a sala 103")
-- OUTPUT:
M
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 21:18:05) 
-- CODE:
a = input("Nome:")

C = a[0].upper(

if(C=="A")or(C=="B")or(C=="C")or(C=="D")or(C=="E")or(C=="F")or(C=="G")or(C=="H")or(C=="I")or(C=="J")or(C=="K"):
	print(a," vai para a sala 101")
elif(C=="L")or(C=="M")or(C=="N"):
	print(a," vai para a sala 102")
elif(C=="O")or(C=="P")or(C=="Q")or(C=="R")or(C=="S")or(C=="T")or(C=="U")or(C=="V")or(C=="W")or(C=="X")or(C=="Y")(C=="Z"):
	print(a," vai para a sala 103")
-- EXECUTION TIME:
0.143628
-- ERROR:
  File "/home/codebench/codes/1675/2189/main.py", line 5
    if(C=="A")or(C=="B")or(C=="C")or(C=="D")or(C=="E")or(C=="F")or(C=="G")or(C=="H")or(C=="I")or(C=="J")or(C=="K"):
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-05 17:47:48) 
-- CODE:
a = input("Nome:")

C = a[0].upper(

if(C=="A")or(C=="B")or(C=="C")or(C=="D")or(C=="E")or(C=="F")or(C=="G")or(C=="H")or(C=="I")or(C=="J")or(C=="K"):
	print(a," vai para a sala 101")
elif(C=="L")or(C=="M")or(C=="N"):
	print(a," vai para a sala 102")
elif(C=="O")or(C=="P")or(C=="Q")or(C=="R")or(C=="S")or(C=="T")or(C=="U")or(C=="V")or(C=="W")or(C=="X")or(C=="Y")(C=="Z"):
	print(a," vai para a sala 103")
-- ERROR:
File "XXXX", line 5
    if(C=="A")or(C=="B")or(C=="C")or(C=="D")or(C=="E")or(C=="F")or(C=="G")or(C=="H")or(C=="I")or(C=="J")or(C=="K"):
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-05 18:04:20) 
-- CODE:
a = input("Nome:")

C = a[0].upper
A=1
B=1
C=1
D=1
E=1
F=1
G=1
H=1
I=1
J=1
K=1
L=2
M=2
N=2
O=3
P=3
Q=3
R=3
S=3
T=3
U=3
V=3
X=3
W=3
Y=3
Z=3

if(c==1)
	print(a," vai para a sala 101")
elif():
	print(a," vai para a sala 102")
elif():
	print(a," vai para a sala 103")
-- ERROR:
File "XXXX", line 31
    if(c==1)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-05 18:26:24) 
-- CODE:
a = input("Nome:")

C = a[0].upper
A=1
B=1
C=1
D=1
E=1
F=1
G=1
H=1
I=1
J=1
K=1
L=2
M=2
N=2
O=3
P=3
Q=3
R=3
S=3
T=3
U=3
V=3
X=3
W=3
Y=3
Z=3

if(c==1)
	print(a," vai para a sala 101")
elif(c==2):
	print(a," vai para a sala 102")
elif(c==3):
	print(a," vai para a sala 103")
-- ERROR:
File "XXXX", line 31
    if(c==1)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-05 18:26:32) 
-- CODE:
a = input("Nome:")

C = a[0].upper
A=1
B=1
C=1
D=1
E=1
F=1
G=1
H=1
I=1
J=1
K=1
L=2
M=2
N=2
O=3
P=3
Q=3
R=3
S=3
T=3
U=3
V=3
X=3
W=3
Y=3
Z=3

if(c==1):
	print(a," vai para a sala 101")
elif(c==2):
	print(a," vai para a sala 102")
elif(c==3):
	print(a," vai para a sala 103")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 31, in <module>
    if(c==1):
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-05 18:27:05) 
-- CODE:
a = input("Nome:")

C = a[0].upper
A=1
B=1
C=1
D=1
E=1
F=1
G=1
H=1
I=1
J=1
K=1
L=2
M=2
N=2
O=3
P=3
Q=3
R=3
S=3
T=3
U=3
V=3
X=3
W=3
Y=3
Z=3

if(C==1):
	print(a," vai para a sala 101")
elif(C==2):
	print(a," vai para a sala 102")
elif(C==3):
	print(a," vai para a sala 103")
-- OUTPUT:
Maria  vai para a sala 101
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-05 18:28:19) 
-- CODE:
a = input("Nome:")

C = a[0].upper
A=1
B=1
D=1
E=1
F=1
G=1
H=1
I=1
J=1
K=1
L=2
M=2
N=2
O=3
P=3
Q=3
R=3
S=3
T=3
U=3
V=3
X=3
W=3
Y=3
Z=3

if(C==1)or(C==C):
	print(a," vai para a sala 101")
elif(C==2):
	print(a," vai para a sala 102")
elif(C==3):
	print(a," vai para a sala 103")
-- OUTPUT:
Maria  vai para a sala 101
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-05 18:34:17) 
-- CODE:
a = input("Nome:")

C = a[0].upper
A=1
B=1
D=1
E=1
F=1
G=1
H=1
I=1
J=1
K=1
L=2
M=2
N=2
O=3
P=3
Q=3
R=3
S=3
T=3
U=3
V=3
X=3
W=3
Y=3
Z=3

if(C==1)or(C=="C"):
	print(a," vai para a sala 101")
elif(C==2):
	print(a," vai para a sala 102")
elif(C==3):
	print(a," vai para a sala 103")
-- OUTPUT:
Maria  vai para a sala 101
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-05 18:34:36) 
-- CODE:
a = input("Nome:")

C = a[0].upper
A=1
B=1
D=1
E=1
F=1
G=1
H=1
I=1
J=1
K=1
L=2
M=2
N=2
O=3
P=3
Q=3
R=3
S=3
T=3
U=3
V=3
X=3
W=3
Y=3
Z=3

if(C==1)or(C=="C"):
	print(a," vai para a sala 101")
elif(C==2):
	print(a," vai para a sala 102")
elif(C==3):
	print(a," vai para a sala 103")
-- OUTPUT:
Maria  vai para a sala 101
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-05 18:35:25) 
-- CODE:
a = input("Nome:")

C = a[0].upper
A=1
B=1
D=1
E=1
F=1
G=1
H=1
I=1
J=1
K=1
L=2
M=2
N=2
O=3
P=3
Q=3
R=3
S=3
T=3
U=3
V=3
X=3
W=3
Y=3
Z=3

if(C==1)or(C=="C"):
	print(a," vai para a sala 101")
elif(C==2):
	print(a," vai para a sala 102")
elif(C==3):
	print(a," vai para a sala 103")
-- OUTPUT:
Maria  vai para a sala 101
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-05 18:36:11) 
-- CODE:
a = input("Nome:")

C = a[0].upper()

A=1
B=1
D=1
E=1
F=1
G=1
H=1
I=1
J=1
K=1
L=2
M=2
N=2
O=3
P=3
Q=3
R=3
S=3
T=3
U=3
V=3
X=3
W=3
Y=3
Z=3

if(C==1)or(C=="C"):
	print(a," vai para a sala 101")
elif(C==2):
	print(a," vai para a sala 102")
elif(C==3):
	print(a," vai para a sala 103")

-- OUTPUT:
Maria  vai para a sala 101
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-05 18:36:26) 
-- CODE:
a = input("Nome:")

C = a[0].upper()

A=1
B=1
D=1
E=1
F=1
G=1
H=1
I=1
J=1
K=1
L=2
M=2
N=2
O=3
P=3
Q=3
R=3
S=3
T=3
U=3
V=3
X=3
W=3
Y=3
Z=3

if(C==1)or(C=="C"):
	print(a," vai para a sala 101")
elif(C==2):
	print(a," vai para a sala 102")
elif(C==3):
	print(a," vai para a sala 103")

-- OUTPUT:
Maria  vai para a sala 101
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 20:33:09) 
-- CODE:
a = input("Nome:")

C = a[0].upper()

A=1
B=1
D=1
E=1
F=1
G=1
H=1
I=1
J=1
K=1
L=2
M=2
N=2
O=3
P=3
Q=3
R=3
S=3
T=3
U=3
V=3
X=3
W=3
Y=3
Z=3

if(C==1)or(C=="C"):
	print(a," vai para a sala 101")
elif(C==2):
	print(a," vai para a sala 102")
elif(C==3):
	print(a," vai para a sala 103")

-- EXECUTION TIME:
0.190541
-- TEST CASE 1:
---- input:
Maria
---- correct output:
Maria vai para a sala 102
---- user output:

-- TEST CASE 2:
---- input:
Jose
---- correct output:
Jose vai para a sala 101
---- user output:

-- TEST CASE 3:
---- input:
Zenilda
---- correct output:
Zenilda vai para a sala 103
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:45:51) 
-- CODE:
a = input("Nome:")

C = a[0].upper()

A=1
B=1
D=1
E=1
F=1
G=1
H=1
I=1
J=1
K=1
L=2
M=2
N=2
O=3
P=3
Q=3
R=3
S=3
T=3
U=3
V=3
X=3
W=3
Y=3
Z=3

if(C==1)or(C=="C"):
	print(a," vai para a sala 101")
elif(C==2):
	print(a," vai para a sala 102")
elif(C==3):
	print(a," vai para a sala 103")

-- OUTPUT:
Maria  vai para a sala 101
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:46:11) 
-- CODE:
a = input("Nome:")

C = a[0].upper()

A=1
B=1
D=1
E=1
F=1
G=1
H=1
I=1
J=1
K=1
L=2
M=2
N=2
O=3
P=3
Q=3
R=3
S=3
T=3
U=3
V=3
X=3
W=3
Y=3
Z=3

if(C==1)or(C=="C"):
	print(a," vai para a sala 101")
elif(C==2):
	print(a," vai para a sala 102")
elif(C==3):
	print(a," vai para a sala 103")

-- OUTPUT:
Maria  vai para a sala 101
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:52:48) 
-- CODE:
a = input("Nome:")

C = a[0].upper()

A=1
B=1
D=1
E=1
F=1
G=1
H=1
I=1
J=1
K=1
L=2
M=2
N=2
O=3
P=3
Q=3
R=3
S=3
T=3
U=3
V=3
X=3
W=3
Y=3
Z=3

if(C>'A' and C<='K'):
	print(a," vai para a sala 101")
elif(C==2):
	print(a," vai para a sala 102")
elif(C==3):
	print(a," vai para a sala 103")

-- OUTPUT:
Maria  vai para a sala 101
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:53:07) 
-- CODE:
a = input("Nome:")

C = a[0].upper()

A=1
B=1
D=1
E=1
F=1
G=1
H=1
I=1
J=1
K=1
L=2
M=2
N=2
O=3
P=3
Q=3
R=3
S=3
T=3
U=3
V=3
X=3
W=3
Y=3
Z=3

if(C>='A' and C<='K'):
	print(a," vai para a sala 101")
elif(C==2):
	print(a," vai para a sala 102")
elif(C==3):
	print(a," vai para a sala 103")

-- OUTPUT:
Maria  vai para a sala 101
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:58:34) 
-- CODE:
a = input("Nome:")

C = a[0].upper()

if(C>="A" and C<="k"):
	print(a," vai para a sala 101")
elif(C >= "L" and C <= "N"):
	print(a," vai para a sala 102")
elif(C >= "O" and C <= "Z"):
	print(a," vai para a sala 103")

-- OUTPUT:
Maria  vai para a sala 101
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:58:46) 
-- CODE:
a = input("Nome:")

C = a[0].upper()

if(C>="A" and C<="k"):
	print(a," vai para a sala 101")
elif(C >= "L" and C <= "N"):
	print(a," vai para a sala 102")
elif(C >= "O" and C <= "Z"):
	print(a," vai para a sala 103")

-- OUTPUT:
Maria  vai para a sala 101
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:00:45) 
-- CODE:
a = input("Nome:").upper()

C = a[0]

if(C >= "A" and C<="k"):
	print(a," vai para a sala 101")
elif(C >= "L" and C <= "N"):
	print(a," vai para a sala 102")
elif(C >= "O" and C <= "Z"):
	print(a," vai para a sala 103")

-- OUTPUT:
MARIA  vai para a sala 101
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:01:16) 
-- CODE:
a = input("Nome:").upper()

C = a[0]

if(C >= "A" and C<="k"):
	print(a," vai para a sala 101")
elif(C >= "L" and C <= "N"):
	print(a," vai para a sala 102")
elif(C >= "O" and C <= "Z"):
	print(a," vai para a sala 103")

-- OUTPUT:
MARIA  vai para a sala 101
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:01:24) 
-- CODE:
a = input("Nome:").upper()

C = a[0]

if(C >= "A" and C<="k"):
	print(a," vai para a sala 101")
elif(C >= "L" and C <= "N"):
	print(a," vai para a sala 102")
elif(C >= "O" and C <= "Z"):
	print(a," vai para a sala 103")

-- OUTPUT:
MARIA  vai para a sala 101
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:02:16) 
-- CODE:
a = input("Nome:").upper()

C = a[0]

if(C >= "A" and C<="k"):
	print(a," vai para a sala 101")
elif(C >= "L" and C <= "N"):
	print(a," vai para a sala 102")
elif(C >= "O" and C <= "Z"):
	print(a," vai para a sala 103")

print(C)
-- OUTPUT:
MARIA  vai para a sala 101
M
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:02:25) 
-- CODE:
a = input("Nome:").upper()

C = a[0]

if(C >= "A" and C<="k"):
	print(a," vai para a sala 101")
elif(C >= "L" and C <= "N"):
	print(a," vai para a sala 102")
elif(C >= "O" and C <= "Z"):
	print(a," vai para a sala 103")

print(C)
-- OUTPUT:
MARIA  vai para a sala 101
M
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:02:50) 
-- CODE:
a = input("Nome:").upper()

C = a[0]

if(C >= A and C<= k):
	print(a," vai para a sala 101")
elif(C >= L and C <= N):
	print(a," vai para a sala 102")
elif(C >= "O" and C <= "Z"):
	print(a," vai para a sala 103")

print(C)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(C >= A and C<= k):
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:04:01) 
-- CODE:
a = input("Nome:").upper()

C = a[0]

if(C >= "A" and C <= "k"):
	print(a," vai para a sala 101")
elif(C >= "L" and C <= "N"):
	print(a," vai para a sala 102")
elif(C >= "O" and C <= "Z"):
	print(a," vai para a sala 103")

print(C)
-- OUTPUT:
MARIA  vai para a sala 101
M
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:04:45) 
-- CODE:
a = input("Nome:")

C = a[0].upper()

if(C >= "A" and C <= "k"):
	print(a," vai para a sala 101")
elif(C >= "L" and C <= "N"):
	print(a," vai para a sala 102")
elif(C >= "O" and C <= "Z"):
	print(a," vai para a sala 103")
-- OUTPUT:
Maria  vai para a sala 101
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 20:54:32) 
-- CODE:
a = input("Nome:")

C = a[0].upper()

if(C >= "A" and C <= "k"):
	print(a," vai para a sala 101")
elif(C >= "L" and C <= "N"):
	print(a," vai para a sala 102")
elif(C >= "O" and C <= "Z"):
	print(a," vai para a sala 103")
-- OUTPUT:
Maria  vai para a sala 101
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 20:55:29) 
-- CODE:
a = input("Nome:")

C = a[0].upper()

if(C >= "A" or C <= "k"):
	print(a," vai para a sala 101")
elif(C >= "L" or C <= "N"):
	print(a," vai para a sala 102")
elif(C >= "O" or C <= "Z"):
	print(a," vai para a sala 103")
-- OUTPUT:
Maria  vai para a sala 101
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 20:56:27) 
-- CODE:
a = input("Nome:")

1 = a[0].upper()

if(1 >= "A" or 1 <= "k"):
	print(a," vai para a sala 101")
elif(1 >= "L" or 1 <= "N"):
	print(a," vai para a sala 102")
elif(1 >= "O" or 1 <= "Z"):
	print(a," vai para a sala 103")
-- ERROR:
File "XXXX", line 3
    1 = a[0].upper()
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 20:57:43) 
-- CODE:
from math import*
a = input("Nome:")

nome = a[0].upper()

if(nome >= "A" or nome <= "k"):
	print(a," vai para a sala 101")
elif(nome >= "L" or nome <= "N"):
	print(a," vai para a sala 102")
elif(1 >= "O" or 1 <= "Z"):
	print(a," vai para a sala 103")
-- OUTPUT:
Maria  vai para a sala 101
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 20:57:56) 
-- CODE:
from math import*
a = input("Nome:")

nome = a[0].upper()

if(nome >= "A" or nome <= "k"):
	print(a," vai para a sala 101")
elif(nome >= "L" or nome <= "N"):
	print(a," vai para a sala 102")
elif(nome >= "O" or nome <= "Z"):
	print(a," vai para a sala 103")
-- OUTPUT:
Maria  vai para a sala 101
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 20:58:07) 
-- CODE:
from math import*
a = input("Nome:")

nome = a[0].upper()

if(nome >= "A" or nome <= "k"):
	print(a," vai para a sala 101")
elif(nome >= "L" or nome <= "N"):
	print(a," vai para a sala 102")
elif(nome >= "O" or nome <= "Z"):
	print(a," vai para a sala 103")
-- OUTPUT:
Maria  vai para a sala 101
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 20:58:46) 
-- CODE:
from math import*
a = input("Nome:")

nome = a[0].upper()

if(nome >= "A" or nome <= "k"):
	print(a," vai para a sala 101")
elif(nome >= "L" or nome <= "N"):
	print(a," vai para a sala 102")
elif(nome >= "O" or nome <= "Z"):
	print(a," vai para a sala 103")

print(nome)
-- OUTPUT:
Maria  vai para a sala 101
M
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 20:58:59) 
-- CODE:
from math import*
a = input("Nome:")

nome = a[0].upper()

if(nome >= "A" or nome <= "k"):
	print(a," vai para a sala 101")
elif(nome >= "L" or nome <= "N"):
	print(a," vai para a sala 102")
elif(nome >= "O" or nome <= "Z"):
	print(a," vai para a sala 103")

print(nome)
-- OUTPUT:
Maria  vai para a sala 101
M
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:01:23) 
-- CODE:
from math import*
a = input("Nome:")

nome = a[0].upper()

if(nome == "A"):
	print(a," vai para a sala 101")
elif(nome == "L"):
	print(a," vai para a sala 102")
elif(nome >= "O" or nome <= "Z"):
	print(a," vai para a sala 103")

print(nome)
-- OUTPUT:
Maria  vai para a sala 103
M
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:09:24) 
-- CODE:
from math import*
a = input("Nome:")

nome = a[0].upper()

if(nome == "A"):
	print(a," vai para a sala 101")
elif(nome == "B"):
	print(a," vai para a sala 101")
elif(nome == "C"):
	print(a," vai para a sala 101")
elif(nome == "D"):
	print(a," vai para a sala 101")
elif(nome == "E"):
	print(a," vai para a sala 101")
elif(nome == "F"):
	print(a," vai para a sala 101")
elif(nome == "G"):
	print(a," vai para a sala 101")
elif(nome == "H"):
	print(a," vai para a sala 101")
elif(nome == "I"):
	print(a," vai para a sala 101")
elif(nome == "J"):
	print(a," vai para a sala 101")
elif(nome == "K"):
	print(a," vai para a sala 101")
elif(nome == "L"):
	print(a," vai para a sala 102")
elif(nome == "M"):
	print(a," vai para a sala 102")
elif(nome == "N"):
	print(a," vai para a sala 102")
elif(nome == "O"):
	print(a," vai para a sala 103")
elif(nome == "P"):
	print(a," vai para a sala 103")
elif(nome == "Q"):
	print(a," vai para a sala 103")
elif(nome == "R"):
	print(a," vai para a sala 103")
elif(nome == "S"):
	print(a," vai para a sala 103")
elif(nome == "T"):
	print(a," vai para a sala 103")
elif(nome == "U"):
	print(a," vai para a sala 103")
elif(nome == "V"):
	print(a," vai para a sala 103")
elif(nome == "W"):
	print(a," vai para a sala 103")
elif(nome == "X"):
	print(a," vai para a sala 103")
elif(nome == "Y"):
	print(a," vai para a sala 103")
elif(nome == "Z"):
	print(a," vai para a sala 103")

print(nome)
-- OUTPUT:
Maria  vai para a sala 102
M
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:09:34) 
-- CODE:
from math import*
a = input("Nome:")

nome = a[0].upper()

if(nome == "A"):
	print(a," vai para a sala 101")
elif(nome == "B"):
	print(a," vai para a sala 101")
elif(nome == "C"):
	print(a," vai para a sala 101")
elif(nome == "D"):
	print(a," vai para a sala 101")
elif(nome == "E"):
	print(a," vai para a sala 101")
elif(nome == "F"):
	print(a," vai para a sala 101")
elif(nome == "G"):
	print(a," vai para a sala 101")
elif(nome == "H"):
	print(a," vai para a sala 101")
elif(nome == "I"):
	print(a," vai para a sala 101")
elif(nome == "J"):
	print(a," vai para a sala 101")
elif(nome == "K"):
	print(a," vai para a sala 101")
elif(nome == "L"):
	print(a," vai para a sala 102")
elif(nome == "M"):
	print(a," vai para a sala 102")
elif(nome == "N"):
	print(a," vai para a sala 102")
elif(nome == "O"):
	print(a," vai para a sala 103")
elif(nome == "P"):
	print(a," vai para a sala 103")
elif(nome == "Q"):
	print(a," vai para a sala 103")
elif(nome == "R"):
	print(a," vai para a sala 103")
elif(nome == "S"):
	print(a," vai para a sala 103")
elif(nome == "T"):
	print(a," vai para a sala 103")
elif(nome == "U"):
	print(a," vai para a sala 103")
elif(nome == "V"):
	print(a," vai para a sala 103")
elif(nome == "W"):
	print(a," vai para a sala 103")
elif(nome == "X"):
	print(a," vai para a sala 103")
elif(nome == "Y"):
	print(a," vai para a sala 103")
elif(nome == "Z"):
	print(a," vai para a sala 103")

print(nome)
-- OUTPUT:
Maria  vai para a sala 102
M
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:09:43) 
-- CODE:
from math import*
a = input("Nome:")

nome = a[0].upper()

if(nome == "A"):
	print(a," vai para a sala 101")
elif(nome == "B"):
	print(a," vai para a sala 101")
elif(nome == "C"):
	print(a," vai para a sala 101")
elif(nome == "D"):
	print(a," vai para a sala 101")
elif(nome == "E"):
	print(a," vai para a sala 101")
elif(nome == "F"):
	print(a," vai para a sala 101")
elif(nome == "G"):
	print(a," vai para a sala 101")
elif(nome == "H"):
	print(a," vai para a sala 101")
elif(nome == "I"):
	print(a," vai para a sala 101")
elif(nome == "J"):
	print(a," vai para a sala 101")
elif(nome == "K"):
	print(a," vai para a sala 101")
elif(nome == "L"):
	print(a," vai para a sala 102")
elif(nome == "M"):
	print(a," vai para a sala 102")
elif(nome == "N"):
	print(a," vai para a sala 102")
elif(nome == "O"):
	print(a," vai para a sala 103")
elif(nome == "P"):
	print(a," vai para a sala 103")
elif(nome == "Q"):
	print(a," vai para a sala 103")
elif(nome == "R"):
	print(a," vai para a sala 103")
elif(nome == "S"):
	print(a," vai para a sala 103")
elif(nome == "T"):
	print(a," vai para a sala 103")
elif(nome == "U"):
	print(a," vai para a sala 103")
elif(nome == "V"):
	print(a," vai para a sala 103")
elif(nome == "W"):
	print(a," vai para a sala 103")
elif(nome == "X"):
	print(a," vai para a sala 103")
elif(nome == "Y"):
	print(a," vai para a sala 103")
elif(nome == "Z"):
	print(a," vai para a sala 103")

print(nome)
-- OUTPUT:
Maria  vai para a sala 102
M
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:09:48) 
-- CODE:
from math import*
a = input("Nome:")

nome = a[0].upper()

if(nome == "A"):
	print(a," vai para a sala 101")
elif(nome == "B"):
	print(a," vai para a sala 101")
elif(nome == "C"):
	print(a," vai para a sala 101")
elif(nome == "D"):
	print(a," vai para a sala 101")
elif(nome == "E"):
	print(a," vai para a sala 101")
elif(nome == "F"):
	print(a," vai para a sala 101")
elif(nome == "G"):
	print(a," vai para a sala 101")
elif(nome == "H"):
	print(a," vai para a sala 101")
elif(nome == "I"):
	print(a," vai para a sala 101")
elif(nome == "J"):
	print(a," vai para a sala 101")
elif(nome == "K"):
	print(a," vai para a sala 101")
elif(nome == "L"):
	print(a," vai para a sala 102")
elif(nome == "M"):
	print(a," vai para a sala 102")
elif(nome == "N"):
	print(a," vai para a sala 102")
elif(nome == "O"):
	print(a," vai para a sala 103")
elif(nome == "P"):
	print(a," vai para a sala 103")
elif(nome == "Q"):
	print(a," vai para a sala 103")
elif(nome == "R"):
	print(a," vai para a sala 103")
elif(nome == "S"):
	print(a," vai para a sala 103")
elif(nome == "T"):
	print(a," vai para a sala 103")
elif(nome == "U"):
	print(a," vai para a sala 103")
elif(nome == "V"):
	print(a," vai para a sala 103")
elif(nome == "W"):
	print(a," vai para a sala 103")
elif(nome == "X"):
	print(a," vai para a sala 103")
elif(nome == "Y"):
	print(a," vai para a sala 103")
elif(nome == "Z"):
	print(a," vai para a sala 103")

print(nome)
-- OUTPUT:
Maria  vai para a sala 102
M
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:10:00) 
-- CODE:
from math import*
a = input("Nome:")

nome = a[0].upper()

if(nome == "A"):
	print(a," vai para a sala 101")
elif(nome == "B"):
	print(a," vai para a sala 101")
elif(nome == "C"):
	print(a," vai para a sala 101")
elif(nome == "D"):
	print(a," vai para a sala 101")
elif(nome == "E"):
	print(a," vai para a sala 101")
elif(nome == "F"):
	print(a," vai para a sala 101")
elif(nome == "G"):
	print(a," vai para a sala 101")
elif(nome == "H"):
	print(a," vai para a sala 101")
elif(nome == "I"):
	print(a," vai para a sala 101")
elif(nome == "J"):
	print(a," vai para a sala 101")
elif(nome == "K"):
	print(a," vai para a sala 101")
elif(nome == "L"):
	print(a," vai para a sala 102")
elif(nome == "M"):
	print(a," vai para a sala 102")
elif(nome == "N"):
	print(a," vai para a sala 102")
elif(nome == "O"):
	print(a," vai para a sala 103")
elif(nome == "P"):
	print(a," vai para a sala 103")
elif(nome == "Q"):
	print(a," vai para a sala 103")
elif(nome == "R"):
	print(a," vai para a sala 103")
elif(nome == "S"):
	print(a," vai para a sala 103")
elif(nome == "T"):
	print(a," vai para a sala 103")
elif(nome == "U"):
	print(a," vai para a sala 103")
elif(nome == "V"):
	print(a," vai para a sala 103")
elif(nome == "W"):
	print(a," vai para a sala 103")
elif(nome == "X"):
	print(a," vai para a sala 103")
elif(nome == "Y"):
	print(a," vai para a sala 103")
elif(nome == "Z"):
	print(a," vai para a sala 103")

print(nome)
-- OUTPUT:
Maria  vai para a sala 102
M
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:10:07) 
-- CODE:
from math import*
a = input("Nome:")

nome = a[0].upper()

if(nome == "A"):
	print(a," vai para a sala 101")
elif(nome == "B"):
	print(a," vai para a sala 101")
elif(nome == "C"):
	print(a," vai para a sala 101")
elif(nome == "D"):
	print(a," vai para a sala 101")
elif(nome == "E"):
	print(a," vai para a sala 101")
elif(nome == "F"):
	print(a," vai para a sala 101")
elif(nome == "G"):
	print(a," vai para a sala 101")
elif(nome == "H"):
	print(a," vai para a sala 101")
elif(nome == "I"):
	print(a," vai para a sala 101")
elif(nome == "J"):
	print(a," vai para a sala 101")
elif(nome == "K"):
	print(a," vai para a sala 101")
elif(nome == "L"):
	print(a," vai para a sala 102")
elif(nome == "M"):
	print(a," vai para a sala 102")
elif(nome == "N"):
	print(a," vai para a sala 102")
elif(nome == "O"):
	print(a," vai para a sala 103")
elif(nome == "P"):
	print(a," vai para a sala 103")
elif(nome == "Q"):
	print(a," vai para a sala 103")
elif(nome == "R"):
	print(a," vai para a sala 103")
elif(nome == "S"):
	print(a," vai para a sala 103")
elif(nome == "T"):
	print(a," vai para a sala 103")
elif(nome == "U"):
	print(a," vai para a sala 103")
elif(nome == "V"):
	print(a," vai para a sala 103")
elif(nome == "W"):
	print(a," vai para a sala 103")
elif(nome == "X"):
	print(a," vai para a sala 103")
elif(nome == "Y"):
	print(a," vai para a sala 103")
elif(nome == "Z"):
	print(a," vai para a sala 103")

print(nome)
-- OUTPUT:
Maria  vai para a sala 102
M
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:10:23) 
-- CODE:
from math import*
a = input("Nome:")

nome = a[0].upper()

if(nome == "A"):
	print(a," vai para a sala 101")
elif(nome == "B"):
	print(a," vai para a sala 101")
elif(nome == "C"):
	print(a," vai para a sala 101")
elif(nome == "D"):
	print(a," vai para a sala 101")
elif(nome == "E"):
	print(a," vai para a sala 101")
elif(nome == "F"):
	print(a," vai para a sala 101")
elif(nome == "G"):
	print(a," vai para a sala 101")
elif(nome == "H"):
	print(a," vai para a sala 101")
elif(nome == "I"):
	print(a," vai para a sala 101")
elif(nome == "J"):
	print(a," vai para a sala 101")
elif(nome == "K"):
	print(a," vai para a sala 101")
elif(nome == "L"):
	print(a," vai para a sala 102")
elif(nome == "M"):
	print(a," vai para a sala 102")
elif(nome == "N"):
	print(a," vai para a sala 102")
elif(nome == "O"):
	print(a," vai para a sala 103")
elif(nome == "P"):
	print(a," vai para a sala 103")
elif(nome == "Q"):
	print(a," vai para a sala 103")
elif(nome == "R"):
	print(a," vai para a sala 103")
elif(nome == "S"):
	print(a," vai para a sala 103")
elif(nome == "T"):
	print(a," vai para a sala 103")
elif(nome == "U"):
	print(a," vai para a sala 103")
elif(nome == "V"):
	print(a," vai para a sala 103")
elif(nome == "W"):
	print(a," vai para a sala 103")
elif(nome == "X"):
	print(a," vai para a sala 103")
elif(nome == "Y"):
	print(a," vai para a sala 103")
elif(nome == "Z"):
	print(a," vai para a sala 103")

print(nome)
-- OUTPUT:
Maria  vai para a sala 102
M
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:10:30) 
-- CODE:
from math import*
a = input("Nome:")

nome = a[0].upper()

if(nome == "A"):
	print(a," vai para a sala 101")
elif(nome == "B"):
	print(a," vai para a sala 101")
elif(nome == "C"):
	print(a," vai para a sala 101")
elif(nome == "D"):
	print(a," vai para a sala 101")
elif(nome == "E"):
	print(a," vai para a sala 101")
elif(nome == "F"):
	print(a," vai para a sala 101")
elif(nome == "G"):
	print(a," vai para a sala 101")
elif(nome == "H"):
	print(a," vai para a sala 101")
elif(nome == "I"):
	print(a," vai para a sala 101")
elif(nome == "J"):
	print(a," vai para a sala 101")
elif(nome == "K"):
	print(a," vai para a sala 101")
elif(nome == "L"):
	print(a," vai para a sala 102")
elif(nome == "M"):
	print(a," vai para a sala 102")
elif(nome == "N"):
	print(a," vai para a sala 102")
elif(nome == "O"):
	print(a," vai para a sala 103")
elif(nome == "P"):
	print(a," vai para a sala 103")
elif(nome == "Q"):
	print(a," vai para a sala 103")
elif(nome == "R"):
	print(a," vai para a sala 103")
elif(nome == "S"):
	print(a," vai para a sala 103")
elif(nome == "T"):
	print(a," vai para a sala 103")
elif(nome == "U"):
	print(a," vai para a sala 103")
elif(nome == "V"):
	print(a," vai para a sala 103")
elif(nome == "W"):
	print(a," vai para a sala 103")
elif(nome == "X"):
	print(a," vai para a sala 103")
elif(nome == "Y"):
	print(a," vai para a sala 103")
elif(nome == "Z"):
	print(a," vai para a sala 103")

print(nome)
-- OUTPUT:
Maria  vai para a sala 102
M
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:10:33) 
-- CODE:
from math import*
a = input("Nome:")

nome = a[0].upper()

if(nome == "A"):
	print(a," vai para a sala 101")
elif(nome == "B"):
	print(a," vai para a sala 101")
elif(nome == "C"):
	print(a," vai para a sala 101")
elif(nome == "D"):
	print(a," vai para a sala 101")
elif(nome == "E"):
	print(a," vai para a sala 101")
elif(nome == "F"):
	print(a," vai para a sala 101")
elif(nome == "G"):
	print(a," vai para a sala 101")
elif(nome == "H"):
	print(a," vai para a sala 101")
elif(nome == "I"):
	print(a," vai para a sala 101")
elif(nome == "J"):
	print(a," vai para a sala 101")
elif(nome == "K"):
	print(a," vai para a sala 101")
elif(nome == "L"):
	print(a," vai para a sala 102")
elif(nome == "M"):
	print(a," vai para a sala 102")
elif(nome == "N"):
	print(a," vai para a sala 102")
elif(nome == "O"):
	print(a," vai para a sala 103")
elif(nome == "P"):
	print(a," vai para a sala 103")
elif(nome == "Q"):
	print(a," vai para a sala 103")
elif(nome == "R"):
	print(a," vai para a sala 103")
elif(nome == "S"):
	print(a," vai para a sala 103")
elif(nome == "T"):
	print(a," vai para a sala 103")
elif(nome == "U"):
	print(a," vai para a sala 103")
elif(nome == "V"):
	print(a," vai para a sala 103")
elif(nome == "W"):
	print(a," vai para a sala 103")
elif(nome == "X"):
	print(a," vai para a sala 103")
elif(nome == "Y"):
	print(a," vai para a sala 103")
elif(nome == "Z"):
	print(a," vai para a sala 103")

print(nome)
-- OUTPUT:
Maria  vai para a sala 102
M
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:10:38) 
-- CODE:
from math import*
a = input("Nome:")

nome = a[0].upper()

if(nome == "A"):
	print(a," vai para a sala 101")
elif(nome == "B"):
	print(a," vai para a sala 101")
elif(nome == "C"):
	print(a," vai para a sala 101")
elif(nome == "D"):
	print(a," vai para a sala 101")
elif(nome == "E"):
	print(a," vai para a sala 101")
elif(nome == "F"):
	print(a," vai para a sala 101")
elif(nome == "G"):
	print(a," vai para a sala 101")
elif(nome == "H"):
	print(a," vai para a sala 101")
elif(nome == "I"):
	print(a," vai para a sala 101")
elif(nome == "J"):
	print(a," vai para a sala 101")
elif(nome == "K"):
	print(a," vai para a sala 101")
elif(nome == "L"):
	print(a," vai para a sala 102")
elif(nome == "M"):
	print(a," vai para a sala 102")
elif(nome == "N"):
	print(a," vai para a sala 102")
elif(nome == "O"):
	print(a," vai para a sala 103")
elif(nome == "P"):
	print(a," vai para a sala 103")
elif(nome == "Q"):
	print(a," vai para a sala 103")
elif(nome == "R"):
	print(a," vai para a sala 103")
elif(nome == "S"):
	print(a," vai para a sala 103")
elif(nome == "T"):
	print(a," vai para a sala 103")
elif(nome == "U"):
	print(a," vai para a sala 103")
elif(nome == "V"):
	print(a," vai para a sala 103")
elif(nome == "W"):
	print(a," vai para a sala 103")
elif(nome == "X"):
	print(a," vai para a sala 103")
elif(nome == "Y"):
	print(a," vai para a sala 103")
elif(nome == "Z"):
	print(a," vai para a sala 103")

print(nome)
-- OUTPUT:
Maria  vai para a sala 102
M
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:10:58) 
-- CODE:
a = input("Nome:")

nome = a[0].upper()

if(nome == "A"):
	print(a," vai para a sala 101")
elif(nome == "B"):
	print(a," vai para a sala 101")
elif(nome == "C"):
	print(a," vai para a sala 101")
elif(nome == "D"):
	print(a," vai para a sala 101")
elif(nome == "E"):
	print(a," vai para a sala 101")
elif(nome == "F"):
	print(a," vai para a sala 101")
elif(nome == "G"):
	print(a," vai para a sala 101")
elif(nome == "H"):
	print(a," vai para a sala 101")
elif(nome == "I"):
	print(a," vai para a sala 101")
elif(nome == "J"):
	print(a," vai para a sala 101")
elif(nome == "K"):
	print(a," vai para a sala 101")
elif(nome == "L"):
	print(a," vai para a sala 102")
elif(nome == "M"):
	print(a," vai para a sala 102")
elif(nome == "N"):
	print(a," vai para a sala 102")
elif(nome == "O"):
	print(a," vai para a sala 103")
elif(nome == "P"):
	print(a," vai para a sala 103")
elif(nome == "Q"):
	print(a," vai para a sala 103")
elif(nome == "R"):
	print(a," vai para a sala 103")
elif(nome == "S"):
	print(a," vai para a sala 103")
elif(nome == "T"):
	print(a," vai para a sala 103")
elif(nome == "U"):
	print(a," vai para a sala 103")
elif(nome == "V"):
	print(a," vai para a sala 103")
elif(nome == "W"):
	print(a," vai para a sala 103")
elif(nome == "X"):
	print(a," vai para a sala 103")
elif(nome == "Y"):
	print(a," vai para a sala 103")
elif(nome == "Z"):
	print(a," vai para a sala 103")

print(nome)
-- OUTPUT:
Maria  vai para a sala 102
M
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:11:12) 
-- CODE:
a = input("Nome:")

nome = a[0].upper()

if(nome == "A"):
	print(a," vai para a sala 101")
elif(nome == "B"):
	print(a," vai para a sala 101")
elif(nome == "C"):
	print(a," vai para a sala 101")
elif(nome == "D"):
	print(a," vai para a sala 101")
elif(nome == "E"):
	print(a," vai para a sala 101")
elif(nome == "F"):
	print(a," vai para a sala 101")
elif(nome == "G"):
	print(a," vai para a sala 101")
elif(nome == "H"):
	print(a," vai para a sala 101")
elif(nome == "I"):
	print(a," vai para a sala 101")
elif(nome == "J"):
	print(a," vai para a sala 101")
elif(nome == "K"):
	print(a," vai para a sala 101")
elif(nome == "L"):
	print(a," vai para a sala 102")
elif(nome == "M"):
	print(a," vai para a sala 102")
elif(nome == "N"):
	print(a," vai para a sala 102")
elif(nome == "O"):
	print(a," vai para a sala 103")
elif(nome == "P"):
	print(a," vai para a sala 103")
elif(nome == "Q"):
	print(a," vai para a sala 103")
elif(nome == "R"):
	print(a," vai para a sala 103")
elif(nome == "S"):
	print(a," vai para a sala 103")
elif(nome == "T"):
	print(a," vai para a sala 103")
elif(nome == "U"):
	print(a," vai para a sala 103")
elif(nome == "V"):
	print(a," vai para a sala 103")
elif(nome == "W"):
	print(a," vai para a sala 103")
elif(nome == "X"):
	print(a," vai para a sala 103")
elif(nome == "Y"):
	print(a," vai para a sala 103")
elif(nome == "Z"):
	print(a," vai para a sala 103")

print(nome)
-- OUTPUT:
Maria  vai para a sala 102
M
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 21:11:15) 
-- CODE:
a = input("Nome:")

nome = a[0].upper()

if(nome == "A"):
	print(a," vai para a sala 101")
elif(nome == "B"):
	print(a," vai para a sala 101")
elif(nome == "C"):
	print(a," vai para a sala 101")
elif(nome == "D"):
	print(a," vai para a sala 101")
elif(nome == "E"):
	print(a," vai para a sala 101")
elif(nome == "F"):
	print(a," vai para a sala 101")
elif(nome == "G"):
	print(a," vai para a sala 101")
elif(nome == "H"):
	print(a," vai para a sala 101")
elif(nome == "I"):
	print(a," vai para a sala 101")
elif(nome == "J"):
	print(a," vai para a sala 101")
elif(nome == "K"):
	print(a," vai para a sala 101")
elif(nome == "L"):
	print(a," vai para a sala 102")
elif(nome == "M"):
	print(a," vai para a sala 102")
elif(nome == "N"):
	print(a," vai para a sala 102")
elif(nome == "O"):
	print(a," vai para a sala 103")
elif(nome == "P"):
	print(a," vai para a sala 103")
elif(nome == "Q"):
	print(a," vai para a sala 103")
elif(nome == "R"):
	print(a," vai para a sala 103")
elif(nome == "S"):
	print(a," vai para a sala 103")
elif(nome == "T"):
	print(a," vai para a sala 103")
elif(nome == "U"):
	print(a," vai para a sala 103")
elif(nome == "V"):
	print(a," vai para a sala 103")
elif(nome == "W"):
	print(a," vai para a sala 103")
elif(nome == "X"):
	print(a," vai para a sala 103")
elif(nome == "Y"):
	print(a," vai para a sala 103")
elif(nome == "Z"):
	print(a," vai para a sala 103")

print(nome)
-- EXECUTION TIME:
0.133851
-- TEST CASE 1:
---- input:
Maria
---- correct output:
Maria vai para a sala 102
---- user output:
Maria  vai para a sala 102
M
-- TEST CASE 2:
---- input:
Jose
---- correct output:
Jose vai para a sala 101
---- user output:
Jose  vai para a sala 101
J
-- TEST CASE 3:
---- input:
Zenilda
---- correct output:
Zenilda vai para a sala 103
---- user output:
Zenilda  vai para a sala 103
Z
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:12:44) 
-- CODE:
a = input("Nome:")

nome = a[0].upper()

if(nome == "A"):
	print(a," vai para a sala 101")
elif(nome == "B"):
	print(a," vai para a sala 101")
elif(nome == "C"):
	print(a," vai para a sala 101")
elif(nome == "D"):
	print(a," vai para a sala 101")
elif(nome == "E"):
	print(a," vai para a sala 101")
elif(nome == "F"):
	print(a," vai para a sala 101")
elif(nome == "G"):
	print(a," vai para a sala 101")
elif(nome == "H"):
	print(a," vai para a sala 101")
elif(nome == "I"):
	print(a," vai para a sala 101")
elif(nome == "J"):
	print(a," vai para a sala 101")
elif(nome == "K"):
	print(a," vai para a sala 101")
elif(nome == "L"):
	print(a," vai para a sala 102")
elif(nome == "M"):
	print(a," vai para a sala 102")
elif(nome == "N"):
	print(a," vai para a sala 102")
elif(nome == "O"):
	print(a," vai para a sala 103")
elif(nome == "P"):
	print(a," vai para a sala 103")
elif(nome == "Q"):
	print(a," vai para a sala 103")
elif(nome == "R"):
	print(a," vai para a sala 103")
elif(nome == "S"):
	print(a," vai para a sala 103")
elif(nome == "T"):
	print(a," vai para a sala 103")
elif(nome == "U"):
	print(a," vai para a sala 103")
elif(nome == "V"):
	print(a," vai para a sala 103")
elif(nome == "W"):
	print(a," vai para a sala 103")
elif(nome == "X"):
	print(a," vai para a sala 103")
elif(nome == "Y"):
	print(a," vai para a sala 103")
elif(nome == "Z"):
	print(a," vai para a sala 103")

print(nome)
-- OUTPUT:
Maria  vai para a sala 102
M
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 21:13:47) 
-- CODE:
a = input("Nome:")

nome = a[0].upper()

if(nome == "A"):
	print(a," vai para a sala 101")
elif(nome == "B"):
	print(a," vai para a sala 101")
elif(nome == "C"):
	print(a," vai para a sala 101")
elif(nome == "D"):
	print(a," vai para a sala 101")
elif(nome == "E"):
	print(a," vai para a sala 101")
elif(nome == "F"):
	print(a," vai para a sala 101")
elif(nome == "G"):
	print(a," vai para a sala 101")
elif(nome == "H"):
	print(a," vai para a sala 101")
elif(nome == "I"):
	print(a," vai para a sala 101")
elif(nome == "J"):
	print(a," vai para a sala 101")
elif(nome == "K"):
	print(a," vai para a sala 101")
elif(nome == "L"):
	print(a," vai para a sala 102")
elif(nome == "M"):
	print(a," vai para a sala 102")
elif(nome == "N"):
	print(a," vai para a sala 102")
elif(nome == "O"):
	print(a," vai para a sala 103")
elif(nome == "P"):
	print(a," vai para a sala 103")
elif(nome == "Q"):
	print(a," vai para a sala 103")
elif(nome == "R"):
	print(a," vai para a sala 103")
elif(nome == "S"):
	print(a," vai para a sala 103")
elif(nome == "T"):
	print(a," vai para a sala 103")
elif(nome == "U"):
	print(a," vai para a sala 103")
elif(nome == "V"):
	print(a," vai para a sala 103")
elif(nome == "W"):
	print(a," vai para a sala 103")
elif(nome == "X"):
	print(a," vai para a sala 103")
elif(nome == "Y"):
	print(a," vai para a sala 103")
elif(nome == "Z"):
	print(a," vai para a sala 103")
-- EXECUTION TIME:
0.171815
-- TEST CASE 1:
---- input:
Maria
---- correct output:
Maria vai para a sala 102
---- user output:
Maria  vai para a sala 102
-- TEST CASE 2:
---- input:
Jose
---- correct output:
Jose vai para a sala 101
---- user output:
Jose  vai para a sala 101
-- TEST CASE 3:
---- input:
Zenilda
---- correct output:
Zenilda vai para a sala 103
---- user output:
Zenilda  vai para a sala 103
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
